# llm_domain_custom

./: .gitignore  pyproject.toml
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/core/: prompts.py  rag_engine.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  documents.py
frontend/: requirements.txt  streamlit_app.py  streamlit_app_backup2.py
